[package]
name = "adventofcode_2022"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "day1"
path = "src/bin/day1/main.rs"

[[bin]]
name = "day2"
path = "src/bin/day2/main.rs"

[[bin]]
name = "day3"
path = "src/bin/day3/main.rs"

[[bin]]
name = "day4"
path = "src/bin/day4/main.rs"

[[bin]]
name = "day5"
path = "src/bin/day5/main.rs"

[dependencies]
once_cell = "1.16.0"
regex = "1.7.0"
